add header and * css.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     
+    <div class="header">
+        <h1>KAO</h1>
+        <a href="">Home</a>
+        <a href="">Force</a>
+        <a href="">Motion</a>
+    </div>
+    <hr>
+
 </body>
 </html>
