--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div class="header">
         <h1>KAO</h1>
-        <a href="">Home</a>
+        <a href="" class="header01">Home</a>
         <a href="">Force</a>
         <a href="">Motion</a>
     </div>
