เลขอะใส่ถุกแล้ว แต่อีกอันใส่ผิด

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     
     <div class="header">
-        <h1>KAO</h1>
-        <a href="" class="header01">Home</a>
+        <h1 class="header01">KAO</h1>
+        <a href="">Home</a>
         <a href="">Force</a>
         <a href="">Motion</a>
     </div>
