--- a/index.html
+++ b/index.html
@@ -7,14 +7,27 @@
     <title>Force and Motion</title>
 </head>
 <body>
-    
+        <!---------- head ---------->
     <div class="header">
-        <h1 class="header01">KAO</h1>
-        <a href="">Home</a>
+        <h1 class="header01">kao</h1>
+        <a href="index.html" class="active">Home</a>
         <a href="">Force</a>
-        <a href="">Motion</a>
+
+        <div class="dropdown">
+            <button class="dropbtn">Motion</button>
+            <div class="dropdown-content">
+            <a href="#">แรง</a>
+            <a href="#">แรงลัพธ์</a>
+            <a href="#">แรงเสียดทาน</a>
+            <a href="#">ความดันของของเหลว</a>
+            <a href="#">แรงพยุงของของเหลว</a>
+            <a href="#">โมเมนต์ของแรง</a>
+            <a href="#">แรงและแรงของสนาม</a>
+            </div>
+        </div>
     </div>
     <hr>
+        <!---------- head ---------->
 
 </body>
 </html>
