--- a/index.html
+++ b/index.html
@@ -28,6 +28,41 @@
     </div>
     <hr>
         <!---------- head ---------->
+    
+        <!---------- slide ---------->
+        <div class="container">
+            <div class="slide-a">
+                <div class="slide-b">
+                    <!--radio buttons-->
+                    <input type="radio" name="radio-btn" id="radio1">
+                    <input type="radio" name="radio-btn" id="radio2">
+                    <input type="radio" name="radio-btn" id="radio3">
+                    
+                    <!----------slide img---------->
+                    <div class="slide first">
+                        <img src="img/001.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="img/002.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="img/003.webp" alt="">
+                    </div>
+                    <!----------slide dot---------->
+                    <div class="navigation-auto">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
+                    </div>
+                </div>
+                <div class="navigation-manual">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                </div>
+            </div>
+        </div>
+        <!---------- slide ---------->
 
 </body>
 </html>
