add img and html code.

--- a/index.html
+++ b/index.html
@@ -64,5 +64,42 @@
         </div>
         <!---------- slide ---------->
 
+        <!---------- content ---------->
+
+        <a href="html/content.html">
+            <h1 style="text-align: center;">เนื้อหาตัวอย่าง</h1>
+        </a>
+        
+        <a href="html/content.html">
+            <div class="container-01">
+                <div class="border-01">
+                    <img src="img/003.webp" alt="" style="width: 100%; border-radius: 10px; margin-bottom: 10px;">
+                    <h2>อัตตราเร็ว คือ ระยะทางที่วัตถุเคลื่อนที่ได้ในหนึ่งหน่วยเวลา</h2>
+                    <p>สัญลักษณ์ : v</p>
+                    <p>มีหน่วยเป็น : เมตรต่อวินาที(m/s)</p>
+                    <div style="border: solid 2px rgb(185, 46, 46);">สูตร คือ อัตตราเร็ว=ระยะทางส่วนเวลา หรือ v=s/t</div>
+                </div>
+                <div class="border-01" style="margin-left: 60px;">
+                    <img src="img/001.jpg" alt="" style="width: 100%; border-radius: 10px; margin-bottom: 10px;">
+                    <h2>แรงแบ่งเป็น 2 ประเภท</h2>
+                    <p>1.แรงสัมผัส</p>
+                    <p>2.แรงไม่สัมผัส</p
+                </div>
+            </div>
+        </a>
+
+        <a href="html/content.html">
+            <div class="container-02">
+                <div class="border-02">
+                    <img src="img/002.jpg" alt="" style="width: 100%; border-radius: 10px; ">
+                    <h2>แรงลัพธ์ คือ ผลรวมของแรงที่กระทำต่อวัตถุทั้งขนาดและทิศทางของแรง</h2>
+                    <p style="display: flex;">สัญลักษณ์ : <img src="img/สัญ แรงลัพธ์.png"></p>
+                    <p>มีหน่วยเป็น : นิวตัน(N)</p>
+                    <h3>เมื่อวัตถุถุกแรงกระทำ 2 แรงขึ้นไปผลรวมของแรงย่อยทุกแรง เรียกว่า"แรงลัพธ์"</h3>
+                </div>
+            </div>
+        </a><br><br>
+    <!---------- content ---------->
+
 </body>
 </html>
