--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <img src="img/001.jpg" alt="" style="width: 100%; border-radius: 10px; margin-bottom: 10px;">
                     <h2>แรงแบ่งเป็น 2 ประเภท</h2>
                     <p>1.แรงสัมผัส</p>
-                    <p>2.แรงไม่สัมผัส</p
+                    <p>2.แรงไม่สัมผัส</p>
                 </div>
             </div>
         </a>
