--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <img src="img/003.webp" alt="" style="width: 100%; border-radius: 10px; margin-bottom: 10px;">
                     <h2>อัตตราเร็ว คือ ระยะทางที่วัตถุเคลื่อนที่ได้ในหนึ่งหน่วยเวลา</h2>
                     <p>สัญลักษณ์ : v</p>
-                    <p>มีหน่วยเป็น : เมตรต่อวินาที(m/s)</p>
+                    <p>มีหน่วยเป็น : เมตรต่อวินาที(m/s)</p><br>
                     <div style="border: solid 2px rgb(185, 46, 46);">สูตร คือ อัตตราเร็ว=ระยะทางส่วนเวลา หรือ v=s/t</div>
                 </div>
                 <div class="border-01" style="margin-left: 60px;">
