--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <a href="html/content.html">
             <div class="container-02">
                 <div class="border-02">
-                    <img src="img/002.jpg" alt="" style="width: 100%; border-radius: 10px; ">
+                    <img src="img/002.jpg" alt="" style="width: 117%; border-radius: 10px; "><br>
                     <h2>แรงลัพธ์ คือ ผลรวมของแรงที่กระทำต่อวัตถุทั้งขนาดและทิศทางของแรง</h2>
                     <p style="display: flex;">สัญลักษณ์ : <img src="img/สัญ แรงลัพธ์.png"></p>
                     <p>มีหน่วยเป็น : นิวตัน(N)</p>
