--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="dropdown">
             <button class="dropbtn">Motion</button>
             <div class="dropdown-content">
-            <a href="#">แรง</a>
-            <a href="#">แรงลัพธ์</a>
-            <a href="#">แรงเสียดทาน</a>
-            <a href="#">ความดันของของเหลว</a>
-            <a href="#">แรงพยุงของของเหลว</a>
-            <a href="#">โมเมนต์ของแรง</a>
-            <a href="#">แรงและแรงของสนาม</a>
+            <a href="window/แรง.html">แรง</a>
+            <a href="window/แรงลัพธ์.html">แรงลัพธ์</a>
+            <a href="window/แรงเสียดทาน.html">แรงเสียดทาน</a>
+            <a href="window/ความดันของของเหลว.html">ความดันของของเหลว</a>
+            <a href="window/แรงพยุงของของเหลว.html">แรงพยุงของของเหลว</a>
+            <a href="window/โมเมนต์ของแรง.html">โมเมนต์ของแรง</a>
+            <a href="window/แรงและแรงของสนาม.html">แรงและแรงของสนาม</a>
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@
                     <h2>อัตตราเร็ว คือ ระยะทางที่วัตถุเคลื่อนที่ได้ในหนึ่งหน่วยเวลา</h2>
                     <p>สัญลักษณ์ : v</p>
                     <p>มีหน่วยเป็น : เมตรต่อวินาที(m/s)</p><br>
-                    <div style="border: solid 2px rgb(185, 46, 46);">สูตร คือ อัตตราเร็ว=ระยะทางส่วนเวลา หรือ v=s/t</div>
+                    <div style="padding: 5px; border-radius: 3px; border: solid 2px rgb(185, 46, 46);">สูตร คือ อัตตราเร็ว=ระยะทางส่วนเวลา หรือ v=s/t</div>
                 </div>
                 <div class="border-01" style="margin-left: 60px;">
                     <img src="img/001.jpg" alt="" style="width: 108%; border-radius: 10px; margin-bottom: 10px;">
