--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header">
         <h1 class="header01">kao</h1>
         <a href="index.html" class="active">Home</a>
-        <a href="">Force</a>
+        <a href="window/การเคลื่อนที่.html">Force</a>
 
         <div class="dropdown">
             <button class="dropbtn">Motion</button>
