--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Force and Motion</title>
 </head>
@@ -100,6 +101,28 @@
             </div>
         </a><br><br>
     <!---------- content ---------->
+          <!------------------------------------footer------------------------------------>
+          <footer>
+            <div class="footerContainer">
+                <div class="socialIcon" style="display: flex; justify-content: center;">
+                  <a href="https://www.facebook.com/kao.pitak" target="_black"><i class="fa-brands fa-facebook"></i></a>
+                  <a href="https://www.instagram.com/kao.pitak/" target="_black"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="https://www.google.com" target="_black"><i class="fa-brands fa-google-plus"></i></a>
+                </div>
+                <div class="footerNav">
+                  <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="window/window01.html">Movie/Content</a></li>
+                    <li><a href="window/window02.html">Picture</a></li>
+                    <li><a href="window/window03.html">Membership</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="footerbottom">
+                <p>Kao.pitak<br></p>
+              </div>
+        </footer>
+          <!------------------------------------footer------------------------------------>e:\ส่งครู\เว็ปอีดิตเตอร์เกือบเสร็จ\style\style01.css
 
 </body>
 </html>
