เปลี่ยนไปเปลี่ยนมา

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Force and Motion</title>
 </head>
@@ -81,7 +80,7 @@
                     <div style="padding: 5px; border-radius: 3px; border: solid 2px rgb(185, 46, 46);">สูตร คือ อัตตราเร็ว=ระยะทางส่วนเวลา หรือ v=s/t</div>
                 </div>
                 <div class="border-01" style="margin-left: 60px;">
-                    <img src="img/001.jpg" alt="" style="width: 108%; border-radius: 10px; margin-bottom: 10px;">
+                    <img src="img/001.jpg" alt="" style="width: 101%; height: 74%; border-radius: 10px; margin-bottom: 10px;">
                     <h2>แรงแบ่งเป็น 2 ประเภท</h2>
                     <p>1.แรงสัมผัส</p>
                     <p>2.แรงไม่สัมผัส</p>
@@ -92,7 +91,7 @@
         <a href="html/content.html">
             <div class="container-02">
                 <div class="border-02">
-                    <img src="img/002.jpg" alt="" style="width: 117%; border-radius: 10px; "><br>
+                    <img src="img/002.jpg" alt="" style="width: 114%; border-radius: 10px; "><br>
                     <h2>แรงลัพธ์ คือ ผลรวมของแรงที่กระทำต่อวัตถุทั้งขนาดและทิศทางของแรง</h2>
                     <p style="display: flex;">สัญลักษณ์ : <img src="img/สัญ แรงลัพธ์.png"></p>
                     <p>มีหน่วยเป็น : นิวตัน(N)</p>
@@ -101,28 +100,16 @@
             </div>
         </a><br><br>
     <!---------- content ---------->
-          <!------------------------------------footer------------------------------------>
-          <footer>
-            <div class="footerContainer">
-                <div class="socialIcon" style="display: flex; justify-content: center;">
-                  <a href="https://www.facebook.com/kao.pitak" target="_black"><i class="fa-brands fa-facebook"></i></a>
-                  <a href="https://www.instagram.com/kao.pitak/" target="_black"><i class="fa-brands fa-instagram"></i></a>
-                  <a href="https://www.google.com" target="_black"><i class="fa-brands fa-google-plus"></i></a>
-                </div>
-                <div class="footerNav">
-                  <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="window/window01.html">Movie/Content</a></li>
-                    <li><a href="window/window02.html">Picture</a></li>
-                    <li><a href="window/window03.html">Membership</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="footerbottom">
-                <p>Kao.pitak<br></p>
-              </div>
-        </footer>
-          <!------------------------------------footer------------------------------------>e:\ส่งครู\เว็ปอีดิตเตอร์เกือบเสร็จ\style\style01.css
+    <!---------- footer ---------->
+    <footer>
+        <h2>kao</h2>
+        <a href="index.html">Home</a>
+        <a href="html/content.html">Content</a>
+        <a href="html/pictures.html">Pctures</a>
+        <a href="html/member.html">Memder</a>
+        <a href="html/download.html">Download</a>
+    </footer>
+    <!---------- footer ---------->
 
 </body>
 </html>
