--- a/index.html
+++ b/index.html
@@ -103,11 +103,15 @@
     <!---------- footer ---------->
     <footer>
         <h2>kao</h2>
-        <a href="index.html">Home</a>
-        <a href="html/content.html">Content</a>
-        <a href="html/pictures.html">Pctures</a>
-        <a href="html/member.html">Memder</a>
-        <a href="html/download.html">Download</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="window/การเคลื่อนที่.html">Force</a>
+        <a href="window/แรง.html">แรง</a>
+        <a href="window/แรงลัพธ์.html">แรงลัพธ์</a>
+        <a href="window/แรงเสียดทาน.html">แรงเสียดทาน</a>
+        <a href="window/ความดันของของเหลว.html">ความดันของของเหลว</a>
+        <a href="window/แรงพยุงของของเหลว.html">แรงพยุงของของเหลว</a>
+        <a href="window/โมเมนต์ของแรง.html">โมเมนต์ของแรง</a>
+        <a href="window/แรงและแรงของสนาม.html">แรงและแรงของสนาม</a>
     </footer>
     <!---------- footer ---------->
 
