เพิ่มให้มันขึ้นกรอบ

--- a/window/การเคลื่อนที่.html
+++ b/window/การเคลื่อนที่.html
@@ -10,8 +10,8 @@
         <!---------- head ---------->
     <div class="header">
         <h1 class="header01">kao</h1>
-        <a href="../index.html" class="active">Home</a>
-        <a href="../window/การเคลื่อนที่.html">Force</a>
+        <a href="../index.html">Home</a>
+        <a href="../window/การเคลื่อนที่.html" class="active">Force</a>
 
         <div class="dropdown">
             <button class="dropbtn">Motion</button>
