--- a/window/การเคลื่อนที่.html
+++ b/window/การเคลื่อนที่.html
@@ -71,6 +71,18 @@
         </a>
         
         <a href="html/content.html">
+            <div class="container-02">
+                <div class="border-02">
+                    <img src="../img/002.jpg" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <h2>แรงลัพธ์ คือ ผลรวมของแรงที่กระทำต่อวัตถุทั้งขนาดและทิศทางของแรง</h2>
+                    <p style="display: flex;">สัญลักษณ์ : <img src="img/สัญ แรงลัพธ์.png"></p>
+                    <p>มีหน่วยเป็น : นิวตัน(N)</p>
+                    <h3>เมื่อวัตถุถุกแรงกระทำ 2 แรงขึ้นไปผลรวมของแรงย่อยทุกแรง เรียกว่า"แรงลัพธ์"</h3>
+                </div>
+            </div>
+        </a>
+        
+        <a href="html/content.html">
             <div class="container-01">
                 <div class="border-01">
                     <img src="../img/003.webp" alt="" style="width: 100%; border-radius: 10px; margin-bottom: 10px;">
