เพิ่มเยอะเลยไม่รุ้ไรบ้าง

--- a/window/แรง.html
+++ b/window/แรง.html
@@ -40,13 +40,13 @@
                     
                     <!----------slide img---------->
                     <div class="slide first">
-                        <img src="../img/ความเร็ว.gif" alt="">
+                        <img src="../img/แรงสัมผัส.webp" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/การกระจัด.gif" alt="">
+                        <img src="../img/แรงไม่สัมผัส.gif" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/dd.png" alt="">
+                        <img src="../img/ฮัก.jpg" alt="">
                     </div>
                     <!----------slide dot---------->
                     <div class="navigation-auto">
@@ -67,17 +67,18 @@
         <!---------- content ---------->
 
         <a href="html/content.html">
-            <h1 style="text-align: center;">การเคลื่อนที่</h1>
+            <h1 style="text-align: center;">แรงในชีวิตประจำวัน</h1>
         </a>
         
         <a href="html/content.html">
             <div class="container-03">
                 <div class="border-02">
-                    <img src="../img/vs.png" alt="" style="width: 114%; border-radius: 10px; "><br>
-                    <h2>ปริมาณสเกลาร์</h2>
-                    <p>ปริมาณที่บอกเเค่ “ขนาด” อย่างเดียว เช่น ระยะทาง อัตราเร็ว เวลา งาน พลังงาน มวล ปริมาตร ความหนาเเน่น อุณหภูมิ</p>
-                    <h2>ปริมาณเวกเตอร์</h2>
-                    <p>ปริมาณที่บอกทั้ง “ขนาด” เเละ “ทิศทาง” เช่น การกระจัด ความเร็ว ความเร่ง แรง น้าหนัก โมเมนต์</p>
+                    <img src="../img/ฮัก.jpg" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <h2>แรง</h2>
+                    <h3>แรงเป็นปริมาณเวกเตอร์</h3>
+                    <h3>สิ่งที่มากระทำแล้ววัตถุเคลื่อนที่หรือหยุดนิ่ง เปลี่ยนทิศทาง และเปลี่ยนรูปร่างได้</h3>
+                    <p>สัญลักษณ์ : <img src="../img/สัญแรง.png"></p>
+                    <p>มีหน่วยเป็น : นิวตัน(N))</p><br>
                 </div>
             </div>
         </a>
@@ -85,45 +86,29 @@
         <a href="html/content.html">
             <div class="container-01">
                 <div class="border-01">
-                    <img src="../img/dd.png" alt="" style="width: 100%; border-radius: 10px; margin-bottom: 10px;">
-                    <h2>ระยะทาง </h2>
-                    <h3>เป็นความยาวที่วัดได้ตามแนวทางการเคลื่อนที่ของวัตถุ ซึ่งเป็นระยะวัตถุ<br>เคลื่อนที่ได้จริงเป็นปริมาณสเกลาร์</h3>
-                    <p>สัญลักษณ์ : s</p>
-                    <p>มีหน่วยเป็น : เมตร(m)</p><br>
+                    <img src="../img/แรงสัมผัส.webp" alt="" style="width: 130%; height: 88%; border-radius: 10px; margin-bottom: 10px;">
+                    <h2>แรงสัมผัส</h2>
                 </div>
-                <div class="border-01" style="margin-left: 60px;">
-                    <img src="../img/การกระจัด.gif" alt="" style="width:122%; height: 78%; border-radius: 10px; margin-bottom: 10px;">
-                    <h2>การกระจัด</h2>
-                    <h3>เป็นระยะห่างที่วัดในแนวตรงจากตําแหน่งเริ่มต้น <br>มีทิศทางจากตําแหน่งเริ่มต้นไปยังตําแหน่งสุดท้าย <br>เป็นปริมาณเวกเตอร์</h3>
-                    <p>สัญลักษณ์ : <img src="../img/สัญการกระจัด.png"></p>
-                    <p>มีหน่วยเป็น : เมตร(m)</p><br>
+                <div class="border-01" style="margin-left: 215px;">
+                    <img src="../img/แรงไม่สัมผัส.gif" alt="" style="width:130%; height: 88%; border-radius: 10px; margin-bottom: 10px;">
+                    <h2>แรงไม่สัมผัส</h2>
+                </div>
+            </div>
+        </a>
+
+        <a href="html/content.html">
+            <div class="container-03">
+                <div class="border-02">
+                    <img src="../img/ทิศของแรง.jpg" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <h2>ขนาดจของแรง แทนด้วยความยาวของลูกศร</h2>
+                    <h2>ทิศทางของแรงแทนด้วย ทิศทางของหัวลูกศร</h2>
                 </div>
             </div>
         </a>
 
         <a href="html/content.html">
             <div class="container-02">
-                <div class="border-02">
-                    <img src="../img/003.webp" alt="" style="width: 114%; border-radius: 10px; "><br>
-                    <h2>อัตตราเร็ว</h2>
-                    <h3>ระยะทางที่วัตถุเคลื่อนที่ได้ในหนึ่งหน่วยเวลา</h3>
-                    <p>สัญลักษณ์ : v</p>
-                    <p>มีหน่วยเป็น : เมตรต่อวินาที(m/s)</p><br>
-                    <div style="width: 340px; padding: 5px; border-radius: 3px; border: solid 2px rgb(185, 46, 46);">สูตร คือ อัตตราเร็ว=ระยะทางส่วนเวลา หรือ v=s/t</div>
-                </div>
-            </div>
-        </a>
-
-        <a href="html/content.html">
-            <div class="container-02">
-                <div class="border-02">
-                    <img src="../img/ความเร็ว.gif" alt="" style="width: 368%; border-radius: 10px; "><br>
-                    <h2>ความเร็ว</h2>
-                    <h3>การกระจัดที่วัตถุเคลื่อนที่ได้ในหนึ่งหน่วยเวลา</h3>
-                    <p>สัญลักษณ์ : <img src="../img/ความเร็ว01.png"></p>
-                    <p>มีหน่วยเป็น : เมตรต่อวินาที(m/s)</p><br>
-                    <div style="width: 340px; padding: 5px; border-radius: 3px; border: solid 2px rgb(185, 46, 46);">สูตร คือ อัตตราเร็ว=ระยะทางส่วนเวลา หรือ v=s/t</div>
-                </div>
+                <img src="../img/ซูโม่.webp" alt="" style="width: 100%; border-radius: 10px; "><br>
             </div>
         </a><br><br>
     <!---------- content ---------->
