--- a/window/แรง.html
+++ b/window/แรง.html
@@ -108,7 +108,7 @@
 
         <a href="html/content.html">
             <div class="container-02">
-                <img src="../img/ซูโม่.webp" alt="" style="width: 100%; border-radius: 10px; "><br>
+                <img src="../img/ไซย่า.gif" alt="" style="width: 100%; border-radius: 10px; "><br>
             </div>
         </a><br><br>
     <!---------- content ---------->
