--- a/window/แรง.html
+++ b/window/แรง.html
@@ -100,8 +100,8 @@
             <div class="container-03">
                 <div class="border-02">
                     <img src="../img/ทิศของแรง.jpg" alt="" style="width: 114%; border-radius: 10px; "><br>
-                    <h2>ขนาดจของแรง แทนด้วยความยาวของลูกศร</h2>
-                    <h2>ทิศทางของแรงแทนด้วย ทิศทางของหัวลูกศร</h2>
+                    <h2 style="margin-left: 15%;">ขนาดจของแรง แทนด้วยความยาวของลูกศร</h2>
+                    <h2 style="margin-left: 15%;">ทิศทางของแรงแทนด้วย ทิศทางของหัวลูกศร</h2>
                 </div>
             </div>
         </a>
