--- a/window/แรงลัพธ์.html
+++ b/window/แรงลัพธ์.html
@@ -73,12 +73,12 @@
         <a href="html/content.html">
             <div class="container-03">
                 <div class="border-02">
-                    <img src="../img/ฮัก.jpg" alt="" style="width: 114%; border-radius: 10px; "><br>
-                    <h2>แรง</h2>
-                    <h3>แรงเป็นปริมาณเวกเตอร์</h3>
-                    <h3>สิ่งที่มากระทำแล้ววัตถุเคลื่อนที่หรือหยุดนิ่ง เปลี่ยนทิศทาง และเปลี่ยนรูปร่างได้</h3>
-                    <p>สัญลักษณ์ : <img src="../img/สัญแรง.png"></p>
-                    <p>มีหน่วยเป็น : นิวตัน(N))</p><br>
+                    <img src="../img/004.jpeg" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <h2>แรงลัพธ์</h2>
+                    <h3>ผลรวมของแรงที่กระทำต่อวัตถุทั้งขนาดและทิศทางของแรง</h3>
+                    <p>สัญลักษณ์ : <img src="../img/สัญ แรงลัพธ์.png"></p>
+                    <p>มีหน่วยเป็น : นิวตัน(N))</p>
+                    <h3>เมื่อวัตถุถุกแรงกระทำตั้งแต่ 2 แรงขึ้นไปผลรวมของแรงย่อยทุกแรงเรียกว่า "แรงลัพธ์"</h3><br>
                 </div>
             </div>
         </a>
@@ -86,23 +86,20 @@
         <a href="html/content.html">
             <div class="container-01">
                 <div class="border-01">
-                    <img src="../img/แรงสัมผัส.webp" alt="" style="width: 130%; height: 88%; border-radius: 10px; margin-bottom: 10px;">
-                    <h2>แรงสัมผัส</h2>
+                    <img src="../img/ดันรถ.jpg" alt="" style="width: 130%; height: 88%; border-radius: 10px; margin-bottom: 10px;">
+                    <h2>แรงมีทิศทางเดียวกัน นำแรงมาบวกกัน</h2>
                 </div>
                 <div class="border-01" style="margin-left: 215px;">
-                    <img src="../img/แรงไม่สัมผัส.gif" alt="" style="width:130%; height: 88%; border-radius: 10px; margin-bottom: 10px;">
-                    <h2>แรงไม่สัมผัส</h2>
+                    <img src="../img/002.jpg" alt="" style="width:100%; height: 88%; border-radius: 10px; margin-bottom: 10px;">
+                    <h2>แรงคนละทิศกัน นำแรงมาลบกัน</h2>
                 </div>
             </div>
         </a>
 
         <a href="html/content.html">
             <div class="container-03">
-                <div class="border-02">
-                    <img src="../img/ทิศของแรง.jpg" alt="" style="width: 114%; border-radius: 10px; "><br>
-                    <h2>ขนาดจของแรง แทนด้วยความยาวของลูกศร</h2>
-                    <h2>ทิศทางของแรงแทนด้วย ทิศทางของหัวลูกศร</h2>
-                </div>
+                <img src="../img/ตั้งฉาก.png" alt="" style="margin-left: 30%; width: 100%; border-radius: 10px; "><br>
+                <h2>ใช้ทฤษฎีบทพีทาโกรัส</h2>
             </div>
         </a>
 
