--- a/window/การเคลื่อนที่.html
+++ b/window/การเคลื่อนที่.html
@@ -130,8 +130,8 @@
     <!---------- footer ---------->
     <footer>
         <h2>kao</h2>
-        <a href="../index.html" class="active">Home</a>
-        <a href="../window/การเคลื่อนที่.html">Force</a>
+        <a href="../index.html">Home</a>
+        <a href="../window/การเคลื่อนที่.html" class="active">Force</a>
         <a href="../window/แรง.html">แรง</a>
         <a href="../window/แรงลัพธ์.html">แรงลัพธ์</a>
         <a href="../window/แรงเสียดทาน.html">แรงเสียดทาน</a>
