--- a/window/แรง.html
+++ b/window/แรง.html
@@ -115,9 +115,9 @@
     <!---------- footer ---------->
     <footer>
         <h2>kao</h2>
-        <a href="../index.html" class="active">Home</a>
+        <a href="../index.html">Home</a>
         <a href="../window/การเคลื่อนที่.html">Force</a>
-        <a href="../window/แรง.html">แรง</a>
+        <a href="../window/แรง.html" class="active">แรง</a>
         <a href="../window/แรงลัพธ์.html">แรงลัพธ์</a>
         <a href="../window/แรงเสียดทาน.html">แรงเสียดทาน</a>
         <a href="../window/ความดันของของเหลว.html">ความดันของของเหลว</a>
