--- a/window/แรงลัพธ์.html
+++ b/window/แรงลัพธ์.html
@@ -40,13 +40,13 @@
                     
                     <!----------slide img---------->
                     <div class="slide first">
-                        <img src="../img/แรงสัมผัส.webp" alt="">
+                        <img src="../img/ซูโม่.webp" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/แรงไม่สัมผัส.gif" alt="">
+                        <img src="../img/004.jpeg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/ฮัก.jpg" alt="">
+                        <img src="../img/ดันรถ.jpg" alt="">
                     </div>
                     <!----------slide dot---------->
                     <div class="navigation-auto">
@@ -98,8 +98,8 @@
 
         <a href="html/content.html">
             <div class="container-03">
-                <img src="../img/ตั้งฉาก.png" alt="" style="margin-left: 30%; width: 100%; border-radius: 10px; "><br>
-                <h2>ใช้ทฤษฎีบทพีทาโกรัส</h2>
+                <img src="../img/ตั้งฉาก.png" alt="" style="margin-left: 5%; width: 100%; border-radius: 10px; "><br>
+                <h2 style="margin-left: 37%;">ใช้ทฤษฎีบทพีทาโกรัส</h2>
             </div>
         </a>
 
@@ -112,10 +112,10 @@
     <!---------- footer ---------->
     <footer>
         <h2>kao</h2>
-        <a href="../index.html" class="active">Home</a>
+        <a href="../index.html">Home</a>
         <a href="../window/การเคลื่อนที่.html">Force</a>
         <a href="../window/แรง.html">แรง</a>
-        <a href="../window/แรงลัพธ์.html">แรงลัพธ์</a>
+        <a href="../window/แรงลัพธ์.html" class="active">แรงลัพธ์</a>
         <a href="../window/แรงเสียดทาน.html">แรงเสียดทาน</a>
         <a href="../window/ความดันของของเหลว.html">ความดันของของเหลว</a>
         <a href="../window/แรงพยุงของของเหลว.html">แรงพยุงของของเหลว</a>
