--- a/window/ความดันของของเหลว.html
+++ b/window/ความดันของของเหลว.html
@@ -40,13 +40,13 @@
                     
                     <!----------slide img---------->
                     <div class="slide first">
-                        <img src="../img/ความเร็ว.gif" alt="">
+                        <img src="../img/อควา.gif" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/การกระจัด.gif" alt="">
+                        <img src="../img/จม.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/dd.png" alt="">
+                        <img src="../img/ต่าง.jpeg" alt="">
                     </div>
                     <!----------slide dot---------->
                     <div class="navigation-auto">
@@ -93,13 +93,13 @@
         <a href="html/content.html">
             <div class="container-01">
                 <div class="border-01">
-                    <img src="../img/จม.jpg" alt="" style="width: 100%; border-radius: 10px; margin-bottom: 10px;">
+                    <img src="../img/จม.jpg" alt="" style="width: 170%; border-radius: 10px; margin-bottom: 10px;">
                     <h2>ความลึก</h2>
                     <p>ลึกมาก ความกันมาก</p>
                     <p>ลึกเท่ากัน ความดันเท่ากัน</p><br>
                 </div>
-                <div class="border-01" style="margin-left: 60px;">
-                    <img src="../img/ต่าง.jpeg" alt="" style="width:122%; height: 83%; border-radius: 10px; margin-bottom: 10px;">
+                <div class="border-01" style="margin-left: 325px;">
+                    <img src="../img/ต่าง.jpeg" alt="" style="width:168%; height: 87%; border-radius: 10px; margin-bottom: 10px;">
                     <h2>ชนิด/ความหนาแน่นของของเหลวง</h2>
                     <p>ความหนาเเน่นมากความดันมาก</p>
                     <p>ความหนาแน่นน้อยความดันน้อย</p><br>
@@ -110,7 +110,7 @@
         <a href="html/content.html">
             <div class="container-02">
                 <div class="border-02">
-                    <img src="../img/003.webp" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <img src="../img/อควา.gif" alt="" style="width: 285%; border-radius: 10px; "><br>
                 </div>
             </div>
         </a><br><br>
