--- a/window/แรงพยุงของของเหลว.html
+++ b/window/แรงพยุงของของเหลว.html
@@ -40,13 +40,13 @@
                     
                     <!----------slide img---------->
                     <div class="slide first">
-                        <img src="../img/ความเร็ว.gif" alt="">
+                        <img src="../img/บันทึก.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/การกระจัด.gif" alt="">
+                        <img src="../img/ไทเท.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/dd.png" alt="">
+                        <img src="../img/ลอยปริ่มจม.png" alt="">
                     </div>
                     <!----------slide dot---------->
                     <div class="navigation-auto">
@@ -73,7 +73,7 @@
         <a href="html/content.html">
             <div class="container-03">
                 <div class="border-02">
-                    <img src="../img/vs.png" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <img src="../img/พยุ่ง.webp" alt="" style="width: 114%; border-radius: 10px; "><br>
                     <h2>แรงพยุงของของเหลว</h2>
                     <p>เเรงที่น้ากระทําต่อผิวของวัตถุด้านล่างทําให้เกิดเเรงพยุงของของเหลว</p>
                     <p>สัญลักษณ์ :<img src="../img/สัญแรงพยุง.png"></p>
@@ -83,9 +83,9 @@
         </a>
 
         <a href="html/content.html">
-            <div class="container-02">
+            <div class="container-03">
                 <div class="border-02">
-                    <img src="../img/vs.png" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <img src="../img/ลอยปริ่มจม.png" alt="" style="width: 114%; border-radius: 10px; "><br>
                     <h2>วัตถุจะลอยหรือะจม ขึ้นอยู่กับ ความหนาเเน่น</h2>
                     <h3>สูตร</h3>
                     <p>D=M/V</p>
@@ -93,7 +93,7 @@
                     <p>M = มวล มีหน่วยเป็น กรัม หรือ กิโลกรัม</p>
                     <p>V = ปริมาตร มีหน่วยเป็น ลูกบาศก์เซ็นติเมตร หรือ ลูกบาศก์เมตร</p>
                 </div>
-            </div>
+            </div><br>
         </a>
 
         <a href="html/content.html">
@@ -103,14 +103,14 @@
         <a href="html/content.html">
             <div class="container-01">
                 <div class="border-01">
-                    <img src="../img/dd.png" alt="" style="width: 100%; border-radius: 10px; margin-bottom: 10px;">
+                    <img src="../img/ไทเท.png" alt="" style="width: 118%; border-radius: 10px; margin-bottom: 10px;">
                     <h2>ปริมาตรของส่วนที่จมในของเหลว</h2>
                     <p>จมมาก = เเรงพยุงมาก</p>
                     <h2>ความหนาเเน่นของของเหลว</h2>
                     <p>ความหนาเเน่นมาก = เเรงพยุงมาก</p><br>
                 </div>
-                <div class="border-01" style="margin-left: 60px;">
-                    <img src="../img/การกระจัด.gif" alt="" style="width:122%; height: 83%; border-radius: 10px; margin-bottom: 10px;">
+                <div class="border-01" style="margin-left: 160px;">
+                    <img src="../img/ถัง.png" alt="" style="width:250%; height: 65%; border-radius: 10px; margin-bottom: 10px;">
                     <h2>ขนาดของเเรงพยุง</h2>
                     <p>ค่าที่อ่านได้จากเครื่องชั่งในอากาศ ในน้า</p>
                     <h3>ปัจจัยที่เกี่ยวข้อง</h3>
@@ -124,7 +124,7 @@
         <a href="html/content.html">
             <div class="container-02">
                 <div class="border-02">
-                    <img src="../img/003.webp" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <img src="../img/บันทึก.jpg" alt="" style="width: 113%; border-radius: 10px; "><br>
                 </div>
             </div>
         </a><br><br>
