--- a/window/แรงเสียดทาน.html
+++ b/window/แรงเสียดทาน.html
@@ -40,13 +40,13 @@
                     
                     <!----------slide img---------->
                     <div class="slide first">
-                        <img src="../img/แรงสัมผัส.webp" alt="">
+                        <img src="../img/ปั่น.gif" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/แรงไม่สัมผัส.gif" alt="">
+                        <img src="../img/รถ.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/ฮัก.jpg" alt="">
+                        <img src="../img/รองเท้า.jpeg" alt="">
                     </div>
                     <!----------slide dot---------->
                     <div class="navigation-auto">
