--- a/window/แรงและแรงของสนาม.html
+++ b/window/แรงและแรงของสนาม.html
@@ -40,13 +40,13 @@
                     
                     <!----------slide img---------->
                     <div class="slide first">
-                        <img src="../img/ความเร็ว.gif" alt="">
+                        <img src="../img/tovvvvvvv.gif" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/การกระจัด.gif" alt="">
+                        <img src="../img/แม่.gif" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/dd.png" alt="">
+                        <img src="../img/แม่โลก.jpg" alt="">
                     </div>
                     <!----------slide dot---------->
                     <div class="navigation-auto">
@@ -73,7 +73,7 @@
         <a href="html/content.html">
             <div class="container-03">
                 <div class="border-02">
-                    <img src="../img/vs.png" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <img src="../img/แม่.gif" alt="" style="width: 114%; border-radius: 10px; "><br>
                     <h2>แรงของแม่เหล็ก</h2>
                     <p>ดูดสารเเม่เหล็กได้โดยไม่จําเป็นต้องสัมผัส</p>
                     <p>จัดเป็นเเรง “ ไม่สัมผัส ”</p>
@@ -90,7 +90,7 @@
         <a href="html/content.html">
             <div class="container-02">
                 <div class="border-02">
-                    <img src="../img/vs.png" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <img src="../img/รถเหล็ก.jpg" alt="" style="width: 135%; border-radius: 10px; "><br>
                     <h2>ขนาดของเเรงเเม่เหล็กขึ้นกับ</h2>
                     <h3>1.ระยะห่างเเม่เหล็ก</h3>
                     <p>เมื่อระยะห่างมากขึ้น เเรงเเม่เหล็กน้อยลง</p>
@@ -99,19 +99,19 @@
                         จะมีเเรงแม่เหล็กมาก (บริเวณขั้วเเม่เหล็ก)</p>
                 </div>
             </div>
-        </a>
+        </a><br><br>
 
         <a href="html/content.html">
             <div class="container-01">
                 <div class="border-01">
-                    <img src="../img/dd.png" alt="" style="width: 100%; border-radius: 10px; margin-bottom: 10px;">
+                    <img src="../img/แม่โลก.jpg" alt="" style="width: 170%; border-radius: 10px; margin-bottom: 10px;">
                     <h2>สนามเเม่เหล็กโลก</h2>
                     <p>บริเวณขั้วใต้ (ทางภูมิศาสตร์) = ขั้วเหนือของเเม่เหล็กโลก</p>
                     <p>บริเวณขั้วเหนือ (ทางภูมิศาสตร์) = ขั้วใต้ของเเม่เหล็กโลก</p>
                     <p>สนามของเเม่เหล็กโลกมีทิศจากขั้วใต้ไปขั้วเหนือ</p><br>
                 </div>
-                <div class="border-01" style="margin-left: 60px;">
-                    <img src="../img/การกระจัด.gif" alt="" style="width:122%; height: 83%; border-radius: 10px; margin-bottom: 10px;">
+                <div class="border-01" style="margin-left: 190px;">
+                    <img src="../img/สนาม.png" alt="" style="width:110%; height: 83%; border-radius: 10px; margin-bottom: 10px;">
                     <h2>สนามโน้มถ่วง</h2>
                     <p>ทําให้เกิดเเรงดึงดูดของโลกกระทําต่อวัตถุ/ตัวเรา</p>
                     <p>สนามโน้มถ่วงมีทิศพุ่งสู่ศูนย์กลาง</p><br>
@@ -122,7 +122,7 @@
         <a href="html/content.html">
             <div class="container-02">
                 <div class="border-02">
-                    <img src="../img/vs.png" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <img src="../img/tovvvvvvv.gif" alt="" style="width: 313%; border-radius: 10px; "><br>
                     <h2>สนามไฟฟ้า</h2>
                     <h3>ประจุไฟฟ้า</h3>
                     <p>เเบ่งออกเป็น 2 ประเภท คือ ประจุบวก(+) เเละ ประจุลบ(-)<br>
