--- a/window/โมเมนต์ของแรง.html
+++ b/window/โมเมนต์ของแรง.html
@@ -40,13 +40,13 @@
                     
                     <!----------slide img---------->
                     <div class="slide first">
-                        <img src="../img/ความเร็ว.gif" alt="">
+                        <img src="../img/หมุนละ.gif" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/การกระจัด.gif" alt="">
+                        <img src="../img/หมุน.gif" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/dd.png" alt="">
+                        <img src="../img/ตาม.png" alt="">
                     </div>
                     <!----------slide dot---------->
                     <div class="navigation-auto">
@@ -73,7 +73,7 @@
         <a href="html/content.html">
             <div class="container-03">
                 <div class="border-02">
-                    <img src="../img/vs.png" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <img src="../img/หมุน.gif" alt="" style="width: 114%; border-radius: 10px; "><br>
                     <h2>โมเมนต์ของแรง</h2>
                     <p>ปริมาณที่บอกถึงความสามารถของเเรงที่ทําให้วัตถุหมุนรอบจุดหมุน</p>
                     <p>สัญลักษณ์ : M</p>
@@ -85,20 +85,20 @@
         <a href="html/content.html">
             <div class="container-01">
                 <div class="border-01">
-                    <img src="../img/dd.png" alt="" style="width: 100%; border-radius: 10px; margin-bottom: 10px;">
+                    <img src="../img/ตาม.png" alt="" style="width: 125%; border-radius: 10px; margin-bottom: 10px;">
                     <h2>โมเมนต์ตามเข็มนาฬิกา</h2><br>
                 </div>
-                <div class="border-01" style="margin-left: 60px;">
-                    <img src="../img/การกระจัด.gif" alt="" style="width:122%; height: 83%; border-radius: 10px; margin-bottom: 10px;">
+                <div class="border-01" style="margin-left: 200px;">
+                    <img src="../img/มวน.png" alt="" style="width:140%; height: 83%; border-radius: 10px; margin-bottom: 10px;">
                     <h2>โมเมนต์ทวนเข็มนาฬิกา</h2><br>
                 </div>
             </div>
         </a>
 
         <a href="html/content.html">
-            <div class="container-02">
+            <div class="container-03">
                 <div class="border-02">
-                    <img src="../img/vs.png" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <img src="../img/f1l1f2l2.png" alt="" style="width: 114%; border-radius: 10px; "><br>
                     <h2>สูตร</h2>
                     <p>M = FL</p>
                     <p>M = โมเมนต์ของเเรง</p>
@@ -113,7 +113,7 @@
         <a href="html/content.html">
             <div class="container-02">
                 <div class="border-02">
-                    <img src="../img/003.webp" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <img src="../img/หมุนละ.gif" alt="" style="width: 273%; border-radius: 10px; "><br>
                 </div>
             </div>
         </a><br><br>
