--- a/window/แรงเสียดทาน.html
+++ b/window/แรงเสียดทาน.html
@@ -43,7 +43,7 @@
                         <img src="../img/ปั่น.gif" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../img/รถ.jpg" alt="">
+                        <img src="../img/t.gif" alt="">
                     </div>
                     <div class="slide">
                         <img src="../img/รองเท้า.jpeg" alt="">
@@ -73,7 +73,7 @@
         <a href="html/content.html">
             <div class="container-03">
                 <div class="border-02">
-                    <img src="../img/การกระจัด.gif" alt="" style="width: 114%; border-radius: 10px; "><br>
+                    <img src="../img/t.gif" alt="" style="width: 100%; border-radius: 10px; "><br>
                     <h2>แรงเสียดทาน</h2>
                     <h3>แรงที่ต้านการเคลื่อนที่ของวัตถุ</h3>
                     <p>สัญลักษณ์ : <img src="../img/สัญเสียด.png"></p>
